# AudibleControl

./: README.md  llm.py  main.py  plan.txt  pyproject.toml  serialconn.py
AudibleControl/: AudibleControl.ino
